Add tests and automatic test/formatting checking

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,14 @@ docs/_build/
 # PyBuilder
 target/
 
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
