--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -1,2 +1,9 @@
 black==22.3.0
 isort==5.10.1
+pytest==7.1.1
+pylint==2.13.7
+mypy==0.942
+codecov==2.1.12
+coverage==6.3.2
+pytest-cov==3.0.0
+pytest-aiohttp==1.0.4
